<resources xmlns:tools="http://schemas.android.com/tools"  xmlns:moz="http://mozac.org/tools">
    <string name="app_name_private_5">Private %s</string>
    <string name="app_name_private_4">%s (Private)</string>
    <string name="content_description_menu">More options</string>
    <string name="content_description_private_browsing_button">Enable private browsing</string>
    <string name="content_description_disable_private_browsing_button">Disable private browsing</string>
    <string name="search_hint">Search to make a difference</string>
    <string name="no_open_tabs_description">Your open tabs will be shown here.</string>
    <string name="no_private_tabs_description">Your private tabs will be shown here.</string>
    <string name="open_tab_tray_single" moz:removedIn="96" tools:ignore="UnusedResources">1 open tab. Tap to switch tabs.</string>
    <string name="open_tab_tray_plural" moz:removedIn="95" tools:ignore="UnusedResources">%1$s open tabs. Tap to switch tabs.</string>
    <string name="tab_tray_multi_select_title">%1$d selected</string>
    <string name="tab_tray_add_new_collection">Add new collection</string>
    <string name="tab_tray_add_new_collection_name">Name</string>
    <string name="tab_tray_select_collection">Select collection</string>
    <string name="tab_tray_close_multiselect_content_description">Exit multiselect mode</string>
    <string name="tab_tray_collection_button_multiselect_content_description">Save selected tabs to collection</string>
    <string name="tab_tray_item_selected_multiselect_content_description" moz:removedIn="96" tools:ignore="UnusedResources">Selected %1$s</string>
    <string name="tab_tray_item_unselected_multiselect_content_description" moz:removedIn="96" tools:ignore="UnusedResources">Unselected %1$s</string>
    <string name="tab_tray_exit_multiselect_content_description" moz:removedIn="96" tools:ignore="UnusedResources">Exited multiselect mode</string>
    <string name="tab_tray_enter_multiselect_content_description" moz:removedIn="96" tools:ignore="UnusedResources">Entered multiselect mode, select tabs to save to a collection</string>
    <string name="tab_tray_multiselect_selected_content_description">Selected</string>
    <string name="recent_bookmarks_title">Recent bookmarks</string>
    <string name="recently_saved_bookmarks_content_description">Recently saved bookmarks</string>
    <string name="recently_saved_show_all">Show all</string>
    <string name="recently_saved_show_all_content_description_2">Show all saved bookmarks</string>
    <string name="recently_saved_show_all_content_description" moz:removedIn="97" tools:ignore="UnusedResources">Show all saved bookmarks button</string>
    <string name="about_content">%1$s is produced by KARMA Search.</string>
    <string name="private_browsing_title" moz:removedIn="96" tools:ignore="UnusedResources">You’re in a private session</string>
    <string name="private_browsing_placeholder_description_2">
        %1$s clears your search and browsing history from private tabs when you close them or quit the app. While this doesn’t make you anonymous to websites or your internet service provider, it makes it easier to keep what you do online private from anyone else who uses this device.</string>
    <string name="private_browsing_common_myths">
       Common myths about private browsing
    </string>
    <string name="private_browsing_delete_session" moz:removedIn="96" tools:ignore="UnusedResources">Delete session</string>
    <string name="cfr_message">Add a shortcut to open private tabs from your Home screen.</string>
    <string name="cfr_pos_button_text">Add shortcut</string>
    <string name="cfr_neg_button_text">No thanks</string>
    <string name="open_in_app_cfr_info_message">You can set KARMA to automatically open links in apps.</string>
    <string name="open_in_app_cfr_positive_button_text">Go to settings</string>
    <string name="open_in_app_cfr_negative_button_text">Dismiss</string>
    <string name="camera_permissions_needed_message">Camera access needed. Go to Android settings, tap permissions, and tap allow.</string>
    <string name="camera_permissions_needed_positive_button_text">Go to settings</string>
    <string name="camera_permissions_needed_negative_button_text">Dismiss</string>
    <string name="tab_tray_close_tabs_banner_message">Set open tabs to close automatically that haven’t been viewed in the past day, week, or month.</string>
    <string name="tab_tray_close_tabs_banner_positive_button_text">View options</string>
    <string name="tab_tray_close_tabs_banner_negative_button_text">Dismiss</string>
    <string name="tab_tray_inactive_onboarding_message">Tabs you haven’t viewed for two weeks get moved here.</string>
    <string name="tab_tray_inactive_onboarding_button_text">Turn off in settings</string>
    <string name="tab_tray_inactive_auto_close_title">Auto-close after one month?</string>
    <string name="tab_tray_inactive_auto_close_body">KARMA can close tabs you haven’t viewed over the past month.</string>
    <string name="tab_tray_inactive_auto_close_button_content_description">Close</string>
    <string name="tab_tray_inactive_turn_on_auto_close_button" moz:removedIn="95" tools:ignore="UnusedResources">Turn on auto close</string>
    <string name="tab_tray_inactive_turn_on_auto_close_button_2">Turn on auto-close</string>
    <string name="home_screen_shortcut_open_new_tab_2">New tab</string>
    <string name="home_screen_shortcut_open_new_private_tab_2">New private tab</string>
    <string name="home_screen_top_sites_heading">Shortcuts</string>
    <string name="recent_tabs_header">Jump back in</string>
    <string name="recent_tabs_show_all">Show all</string>
    <string name="recent_tabs_show_all_content_description_2">Show all recent tabs button</string>
    <string name="recent_tabs_show_all_content_description2" moz:removedIn="97" tools:ignore="UnusedResources">Show all recent tabs</string>
    <string name="recent_tabs_search_term">Your search for \"%1$s\"</string>
    <string name="recent_tabs_search_term_count" moz:removedIn="96" tools:ignore="UnusedResources">Sites: %1$s</string>
    <string name="recent_tabs_search_term_count_2">%d sites</string>
    <string name="history_metadata_header_2">Recently visited</string>
    <string name="history_metadata_header_3" moz:removedIn="96" tools:ignore="UnusedResources">Recent searches</string>
    <string name="recently_visited_menu_item_remove">Remove</string>
    <string name="past_explorations_show_all_content_description_2">Show all past explorations</string>
    <string name="past_explorations_show_all_content_description" moz:removedIn="97" tools:ignore="UnusedResources">Show all past explorations button</string>
    <string name="browser_tabs_button" moz:removedIn="96" tools:ignore="UnusedResources">Open Tabs</string>
    <string name="browser_menu_back">Back</string>
    <string name="browser_menu_forward">Forward</string>
    <string name="browser_menu_refresh">Refresh</string>
    <string name="browser_menu_stop">Stop</string>
    <string name="browser_menu_bookmark" moz:removedIn="95" tools:ignore="UnusedResources">Bookmark</string>
    <string name="browser_menu_edit_bookmark" moz:removedIn="96" tools:ignore="UnusedResources">Edit bookmark</string>
    <string name="browser_menu_add_ons">Add-ons</string>
    <string name="browser_menu_extensions" moz:removedIn="96" tools:ignore="UnusedResources">Extensions</string>
    <string name="no_add_ons">No add-ons here</string>
    <string name="browser_menu_help">Help</string>
    <string name="browser_menu_whats_new">What’s New</string>
    <string name="browser_menu_settings">Settings</string>
    <string name="browser_menu_library">Library</string>
    <string name="browser_menu_desktop_site">Desktop site</string>
    <string name="browser_menu_add_to_homescreen">Add to Home screen</string>
    <string name="browser_menu_install_on_homescreen">Install</string>
    <string name="synced_tabs">Synced tabs</string>
    <string name="resync_button_content_description">Resync</string>
    <string name="browser_menu_find_in_page">Find in page</string>
    <string name="browser_menu_private_tab" moz:removedIn="96" tools:ignore="UnusedResources">Private tab</string>
    <string name="browser_menu_save_to_collection_2">Save to collection</string>
    <string name="browser_menu_share">Share</string>
    <string name="menu_share_with" moz:removedIn="96" tools:ignore="UnusedResources">Share with…</string>
    <string name="browser_menu_open_in_fenix">Open in %1$s</string>
    <string name="browser_menu_powered_by">POWERED BY %1$s</string>
    <string name="browser_menu_powered_by2">Powered by %1$s</string>
    <string name="browser_menu_read">Reader view</string>
    <string name="browser_menu_read_close">Close reader view</string>
    <string name="browser_menu_open_app_link">Open in app</string>
    <string name="browser_menu_read_appearance" moz:removedIn="96" tools:ignore="UnusedResources">Appearance</string>
    <string name="browser_menu_customize_reader_view">Customize reader view</string>
    <string name="browser_menu_add">Add</string>
    <string name="browser_menu_edit">Edit</string>
    <string name="browser_menu_customize_home">Customize home</string>
    <string name="browser_menu_customize_home_1">Customize homepage</string>
    <string name="browser_toolbar_home">Home screen</string>
    <string name="browser_menu_feedback">Your feedback</string>
    <string name="unknown_scheme_error_message" moz:removedIn="96" tools:ignore="UnusedResources">Unable to connect. Unrecognizable URL scheme.</string>
    <string name="a11y_selected_locale_content_description">Selected language</string>
    <string name="a11y_search_icon_content_description" moz:removedIn="96" tools:ignore="UnusedResources">Search</string>
    <string name="default_locale_text">Follow device language</string>
    <string name="locale_search_hint">Search language</string>
    <string name="search_scan_button">Scan</string>
    <string name="search_engine_button">Search engine</string>
    <string name="search_shortcuts_engine_settings">Search engine settings</string>
    <string name="search_engines_search_with" moz:removedIn="96" tools:ignore="UnusedResources">This time, search with:</string>
    <string name="awesomebar_clipboard_title">Fill link from clipboard</string>
    <string name="search_suggestions_onboarding_allow_button">Allow</string>
    <string name="search_suggestions_onboarding_do_not_allow_button">Don’t allow</string>
    <string name="search_suggestions_onboarding_title">Allow search suggestions in private sessions?</string>
    <string name="search_suggestions_onboarding_text">%s will share everything you type in the address bar with your default search engine.</string>
    <string name="search_suggestions_onboarding_learn_more_link">Learn more</string>
    <string name="search_engine_suggestions_title">Search %s</string>
    <string name="search_engine_suggestions_description">Search directly from the address bar</string>
    <string name="onboarding_home_screen_title_2">What’s new in KARMA</string>
    <string name="onboarding_home_screen_description_2">It’s now easier to pick back up where you left off.</string>
    <string name="onboarding_default_browser_title">Set up KARMA as your default browser!</string>
    <string name="onboarding_default_browser_subtitle">Websites will be opened with KARMA so that you can help protect biodiversity and improve animal welfare</string>
    <string name="onboarding_default_browser_arrow">Select KARMA</string>
    <string name="onboarding_default_browser_choose">Choose KARMA</string>
    <string name="onboarding_default_browser_notnow">Not now</string>
    <string name="add_widget_title">Add the KARMA widget to search directly from your homepage !</string>
    <string name="add_a_widget">Add a widget</string>
    <string name="add_widget_later">Later</string>
</resources>