<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/defaultbrowserFragment"
    tools:context="org.mozilla.fenix.home.onboarding.DefaultBrowserFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/photonBlack">

    <TextView
        android:id="@+id/onboarding_default_browser_title"
        style="@style/OnboardingTitleTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/onboarding_default_browser_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboarding_default_browser_subtitle"
        style="@style/OnboardingSubitleTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/onboarding_default_browser_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_default_browser_title" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_default_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/onboarding_default_browser_subtitle"
        app:srcCompat="@drawable/default_browser" />

    <Button
        android:id="@+id/onboarding_default_button"
        style="@style/OnboardingButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/onboarding_default_browser_choose"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_default_notnow"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/onboarding_default_notnow"
        style="@style/NeutralButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/onboarding_default_browser_notnow"
        android:textColor="@color/photonGreen50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/OnboardingTitleTextViewStyle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:rotation="10"
        android:textSize="16sp"
        android:text="@string/onboarding_default_browser_arrow"
        android:textColor="@color/photonGreen50"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>