<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="?attr/scrimBackground"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:layout_gravity="bottom"
        android:background="@drawable/ic_pop_up_black_screen">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/add_karma_illus"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/add_widget_title"
            style="@style/OnboardingTitleTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView4"
            android:textColor="@color/photonGreen50"
            android:text="@string/add_widget_title" />

        <ImageView
            android:id="@+id/add_widget_demo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_widget_title"
            app:srcCompat="@drawable/karma_search_widget"
            android:importantForAccessibility="no"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/add_widget"
            style="@style/OnboardingButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_widget_later"
            app:layout_constraintTop_toBottomOf="@id/add_widget_demo"
            android:textStyle="bold"
            android:text="@string/add_a_widget" />

        <Button
            android:id="@+id/add_widget_later"
            style="@style/NeutralButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_widget"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/photonGreen50"
            android:text="@string/add_widget_later" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>